# new-pkg

./: README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  examples.rst  index.rst  install.rst  interface.rst
newpkg/: __init__.py  code.py
