[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"

[project]
name = "new-pkg"
authors = [{name = "Mike Knerr"}]
#authors = [{name = "author", email = "author@email"}]
dynamic = ["version"] #, "description"]
description = "base modules, objects, classes" #2nd line in pypi project page
readme = "README.md"
license = {text = "MIT"}
#license = LICENSE.md" =
license-files = ['LICENSE*']
requires-python = ">=3.6"
keywords = ["python", "robotics", "mobile robotics", "system"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/mkner/new-pkg/"


[tool.setuptools.packages]
find = {}

[tool.setuptools.packages.find]
#where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["newpkg"] #include = ["my_package*"]  # package names should match these glob patterns (["*"] by default)
#exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)









