 
# version is one source from __init__

[metadata]
name = new-pkgsetup 
version = attr: newpkg.__version__ 
#author = Author Name
#author_email = name@domain.com
description = package build using setuptools
long_description = file: README.rst
#long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
#url = https://domain.com/sitename/
readme = "README.md"
keywords = python, packages
license =   MIT
classifiers = 
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
   


[options]
packages = find:

#ok is module export name
# that can be different from package distro name
[options.packages.find]
include = newpkg*


